[CDAP-2890] include templates profile when building parcel to include ETL jars